2025-02-22T00:35:06Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13467660990 # 573
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-22
* notice: last 14d: unq all: 7 17
* notice: prev accum: outdated-unq outdated-all / unq all: 751 1229 / 767 1245
* notice: next accum: outdated-unq outdated-all / unq all: 752 1230 / 769 1247
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [2025-02-07] / [2025-02-21]

2025-02-21T00:37:01Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13447466909 # 572
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-21
* notice: last 14d: unq all: 6 16
* notice: prev accum: outdated-unq outdated-all / unq all: 750 1228 / 765 1243
* notice: next accum: outdated-unq outdated-all / unq all: 751 1229 / 767 1245
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [2025-02-06] / [2025-02-20]

2025-02-20T00:36:49Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13425235610 # 571
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-20
* notice: last 14d: unq all: 5 15
* notice: prev accum: outdated-unq outdated-all / unq all: 748 1226 / 764 1242
* notice: next accum: outdated-unq outdated-all / unq all: 750 1228 / 765 1243
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-02-05] / [2025-02-19]

2025-02-19T00:36:25Z: