@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-02-22T00:35:06Z",
-  "count_outdated" : 1230,
-  "uniques_outdated" : 752,
-  "count" : 1247,
-  "uniques" : 769,
+  "timestamp" : "2025-02-23T00:39:39Z",
+  "count_outdated" : 1231,
+  "uniques_outdated" : 753,
+  "count" : 1250,
+  "uniques" : 772,
   "clones" : [
-    {
-      "timestamp": "2025-02-08T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-02-09T00:00:00Z",
       "count": 3,
@@ -103,6 +94,15 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-02-22T00:00:00Z",
+      "count": 3,
+      "count_minmax": [ 3, 3 ],
+      "count_decinc": [ 0, 3 ],
+      "uniques": 3,
+      "uniques_minmax": [ 3, 3 ],
+      "uniques_decinc": [ 0, 3 ]
     }
   ]
 }
