@@ -1,12 +1,7 @@
 {
-  "count": 17,
-  "uniques": 7,
+  "count": 19,
+  "uniques": 9,
   "clones": [
-    {
-      "timestamp": "2025-02-08T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-02-09T00:00:00Z",
       "count": 3,
@@ -56,6 +51,11 @@
       "timestamp": "2025-02-21T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2025-02-22T00:00:00Z",
+      "count": 3,
+      "uniques": 3
     }
   ]
 }
